# HQC-FCM

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
configs/dataset/: motivated.yaml  sparse.yaml
configs/models/: cfcm.yaml  mlp.yaml  qfcm.yaml  smoketest.yaml
examples/: rollout_demo.py
src/hqcfcm/: __init__.py  main.py
src/hqcfcm/data_generation/: __init__.py  fcm_generator.py  generate_dataset.py
src/hqcfcm/models/: __init__.py  cfcm.py  mlp.py  qfcm.py
src/hqcfcm/postprocessing/: __init__.py  rollout.py  w_recovery.py
src/hqcfcm/training/: __init__.py  artifacts.py  train.py
src/hqcfcm/utils/: __init__.py  io.py  plotting.py
tests/: conftest.py  test_fcm_generator.py  test_io.py  test_main.py  test_postprocessing.py
